--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "yeaap",
   "version": "1.0.0",
+  "license": "ISC",
   "repository": {
     "url": "git@github.com:mannol/yeaap.git"
   },
   "dependencies": {
+    "apollo-server-express": "^2.9.16",
+    "convict": "^5.2.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "firebase-admin": "^8.9.2",
+    "graphql": "^14.6.0",
+    "graphql-iso-date": "^3.6.1",
+    "lodash": "^4.17.15",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon ./src/server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node ./src/server.js"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -23,6 +32,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "husky": "^4.2.1",
     "lint-staged": "^10.0.7",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   }
 }
