--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/server.js",
+    "gcp-build": "next build",
     "build": "next build",
     "start": "NODE_ENV=production node ./src/server.js"
   },
