--- a/package.json
+++ b/package.json
@@ -17,11 +17,19 @@
     "firebase-admin": "^8.9.2",
     "graphql": "^14.6.0",
     "graphql-iso-date": "^3.6.1",
+    "imagemin-optipng": "^7.1.0",
+    "imagemin-svgo": "^7.0.0",
     "lodash": "^4.17.15",
     "next": "^9.2.1",
+    "next-compose-plugins": "^2.2.0",
+    "next-fonts": "^1.0.3",
+    "next-optimized-images": "^2.5.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-modal": "^3.11.1",
+    "react-modal-hook": "^3.0.0",
+    "svg-sprite-loader": "4.1.3"
   },
   "scripts": {
     "dev": "nodemon ./src/server.js",
