--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "imagemin-optipng": "^7.1.0",
     "imagemin-svgo": "^7.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "next": "^9.2.1",
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^1.0.3",
     "next-optimized-images": "^2.5.4",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-modal-hook": "^3.0.0",
-    "svg-sprite-loader": "4.1.3"
+    "svg-sprite-loader": "4.1.3",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "dev": "nodemon ./src/server.js",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
+    "clipboardy": "^2.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
