--- a/.eslintrc
+++ b/.eslintrc
@@ -143,7 +143,7 @@
     "react/no-children-prop": "off",
     "react/jsx-no-target-blank": "off",
     "react/jsx-handler-names": "error",
-    "react/jsx-no-bind": "error",
+    "react/jsx-no-bind": "off",
     "react/prop-types": "error",
     "react/jsx-pascal-case": "off",
 
