--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "url": "git@github.com:mannol/yeaap.git"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "apollo-boost": "^0.4.7",
     "apollo-server-express": "^2.9.16",
     "convict": "^5.2.0",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "express": "^4.17.1",
+    "firebase": "^7.8.2",
     "firebase-admin": "^8.9.2",
     "graphql": "^14.6.0",
     "graphql-iso-date": "^3.6.1",
@@ -31,6 +34,7 @@
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-modal-hook": "^3.0.0",
+    "react-toast-notifications": "^2.4.0",
     "svg-sprite-loader": "4.1.3",
     "uniqid": "^5.2.0"
   },
