--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ NODE_ENV=development
 PORT=5000
 FIREBASE_BACKEND_CREDENTIALS={}
 FIREBASE_WEBAPI_KEY=
-
 FIREBASE_APP_CONFIG={}
+REDIS_URL=redis://localhost:6379
+STRIPE_API_KEY=sk_test_fvxj4a5mA9oxyJeSSdylHZsf
