--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^10.0.27",
     "apollo-boost": "^0.4.7",
     "apollo-server-express": "^2.9.16",
+    "bull": "^3.13.0",
     "convict": "^5.2.0",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
@@ -35,6 +36,7 @@
     "react-modal": "^3.11.1",
     "react-modal-hook": "^3.0.0",
     "react-toast-notifications": "^2.4.0",
+    "stripe": "^8.15.0",
     "svg-sprite-loader": "4.1.3",
     "uniqid": "^5.2.0"
   },
