--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 ENABLE_PLAYGROUND=true
 NODE_ENV=development
 PORT=5000
-FIREBASE_BACKEND_CREDENTIALS={}
+FIREBASE_CREDENTIALS={}
 FIREBASE_WEBAPI_KEY=
 FIREBASE_APP_CONFIG={}
 REDIS_URL=redis://localhost:6379
