--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.9.6",
     "react-modal": "^3.11.1",
     "react-modal-hook": "^3.0.0",
     "react-toast-notifications": "^2.4.0",
     "stripe": "^8.15.0",
+    "spacetime": "^6.4.1",
     "svg-sprite-loader": "4.1.3",
-    "uniqid": "^5.2.0"
+    "uniqid": "^5.2.0",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "dev": "nodemon ./src/server.js",
