--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "firebase": "^7.8.2",
     "firebase-admin": "^8.9.2",
     "graphql": "^14.6.0",
@@ -38,8 +39,8 @@
     "react-modal": "^3.11.1",
     "react-modal-hook": "^3.0.0",
     "react-toast-notifications": "^2.4.0",
-    "stripe": "^8.15.0",
     "spacetime": "^6.4.1",
+    "stripe": "^8.15.0",
     "svg-sprite-loader": "4.1.3",
     "uniqid": "^5.2.0",
     "yup": "^0.28.1"
