--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,8 @@ FIREBASE_CREDENTIALS={}
 FIREBASE_WEBAPI_KEY=
 FIREBASE_APP_CONFIG={}
 REDIS_URL=redis://localhost:6379
-STRIPE_API_KEY=sk_test_fvxj4a5mA9oxyJeSSdylHZsf
+STRIPE_API_PUBLISHABLE_KEY=pk_test_RazDUfTZbrwp8kx7DTJIjk97
+STRIPE_API_SECRET_KEY=sk_test_fvxj4a5mA9oxyJeSSdylHZsf
+GOOGLE_MAPS_KEY=
+API_URL=http://localhost:5000
+APP_URL=http://localhost:5000
