--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "@apollo/react-hooks": "^3.1.3",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
-    "apollo-boost": "^0.4.7",
+    "@stripe/react-stripe-js": "^1.0.3",
+    "@stripe/stripe-js": "^1.0.2",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
     "apollo-server-express": "^2.9.16",
+    "apollo-utilities": "^1.3.3",
     "bull": "^3.13.0",
     "convict": "^5.2.0",
+    "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
@@ -20,8 +30,10 @@
     "express-session": "^1.17.0",
     "firebase": "^7.8.2",
     "firebase-admin": "^8.9.2",
+    "format-num": "^1.0.0",
     "graphql": "^14.6.0",
-    "graphql-iso-date": "^3.6.1",
+    "graphql-scalars": "^1.0.6",
+    "graphql-tag": "^2.10.3",
     "imagemin-optipng": "^7.1.0",
     "imagemin-svgo": "^7.0.0",
     "lodash": "^4.17.15",
@@ -30,22 +42,25 @@
     "next-compose-plugins": "^2.2.0",
     "next-fonts": "^1.0.3",
     "next-optimized-images": "^2.5.4",
+    "next-with-apollo": "^5.0.0",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.9.6",
+    "react-load-script": "^0.0.6",
     "react-modal": "^3.11.1",
     "react-modal-hook": "^3.0.0",
     "react-toast-notifications": "^2.4.0",
-    "spacetime": "^6.4.1",
     "stripe": "^8.15.0",
+    "subscriptions-transport-ws": "^0.9.16",
     "svg-sprite-loader": "4.1.3",
     "uniqid": "^5.2.0",
     "yup": "^0.28.1"
   },
   "scripts": {
+    "build-fragment": "node ./src/utils/schemaQuery.js",
     "dev": "nodemon ./src/server.js",
     "gcp-build": "next build",
     "build": "next build",
