--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-utilities": "^1.3.3",
     "bull": "^3.13.0",
     "convict": "^5.2.0",
+    "currency-symbol-map": "^4.0.4",
     "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
@@ -44,6 +45,7 @@
     "next-optimized-images": "^2.5.4",
     "next-with-apollo": "^5.0.0",
     "node-fetch": "^2.6.0",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-datetime-picker": "^2.9.0",
