chore: add "stop-previous-version" to the deploy script

--- a/scripts/deploy.yaml
+++ b/scripts/deploy.yaml
@@ -35,6 +35,8 @@ steps:
     args:
       - app
       - deploy
+      - --promote
+      - --stop-previous-version
 secrets:
   - kmsKeyName: projects/yeaap-1/locations/global/keyRings/env-variables/cryptoKeys/firebase-credentials
     secretEnv:
