feat: add WEBSOCKET_URL env variable

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ REDIS_URL=redis://localhost:6379
 STRIPE_API_PUBLISHABLE_KEY=pk_test_RazDUfTZbrwp8kx7DTJIjk97
 STRIPE_API_SECRET_KEY=sk_test_fvxj4a5mA9oxyJeSSdylHZsf
 GOOGLE_MAPS_KEY=
-API_URL=http://localhost:5000
+API_URL=http://localhost:5000/graphql
+WEBSOCKET_URL=ws://localhost:5000/graphql
 APP_URL=http://localhost:5000
