--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ENABLE_PLAYGROUND=true
 NODE_ENV=development
 PORT=5000
+SESSION_SECRET=something
 FIREBASE_CREDENTIALS={}
 FIREBASE_WEBAPI_KEY=
 FIREBASE_APP_CONFIG={}
