chore: check the version flag of "gcloud app deploy"

--- a/scripts/deploy.yaml
+++ b/scripts/deploy.yaml
@@ -37,8 +37,7 @@ steps:
     args:
       - app
       - deploy
-      - --promote
-      - --stop-previous-version
+      - --version=production
 secrets:
   - kmsKeyName: projects/yeaap-1/locations/global/keyRings/env-variables/cryptoKeys/firebase-credentials
     secretEnv:
