--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-server-express": "^2.9.16",
     "apollo-utilities": "^1.3.3",
     "bull": "^3.13.0",
+    "connect-redis": "^4.0.4",
     "convict": "^5.2.0",
     "currency-symbol-map": "^4.0.4",
     "date-fns": "^2.9.0",
@@ -55,6 +56,7 @@
     "react-modal": "^3.11.1",
     "react-modal-hook": "^3.0.0",
     "react-toast-notifications": "^2.4.0",
+    "redis": "^3.0.2",
     "stripe": "^8.15.0",
     "subscriptions-transport-ws": "^0.9.16",
     "svg-sprite-loader": "4.1.3",
