--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "subscriptions-transport-ws": "^0.9.16",
     "svg-sprite-loader": "4.1.3",
     "uniqid": "^5.2.0",
+    "use-breakpoint": "^1.1.1",
     "use-clipboard-copy": "^0.1.2",
     "yup": "^0.28.1"
   },
