--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-modal-hook": "^3.0.0",
     "react-toast-notifications": "^2.4.0",
     "redis": "^3.0.2",
+    "shortid": "^2.2.15",
     "stripe": "^8.15.0",
     "subscriptions-transport-ws": "^0.9.16",
     "svg-sprite-loader": "4.1.3",
